feat: screen manager login emails

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.2",
     "dayjs": "^1.11.13",
-    "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "gantt-task-react": "^0.3.9",
     "html-react-parser": "^5.2.1",
@@ -90,6 +89,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "color": "^4.2.3",
+    "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -99,6 +99,7 @@
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "firebase": "^11.4.0",
     "postcss": "^8.4.45",
     "postcss-nesting": "^13.0.0",
     "prettier": "^3.3.3",
